# Godot-Trail3D

./: BUILD.bat  BUILD.sh  Cargo.toml  README.md
addons/SomeRanDev_Trail3D/: Trail3D.gdextension
src/: lib.rs  trail_3d.rs
